	doesn't work as a dictionary key
	* src/PeopleStore.py: modify status bar, unroll loop while adding values

2003-10-16  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/GrampsCfg.py: Implement instant preferences (HIG).
	* src/preferences.glade: Likewise.
	* src/gramps_main.py (pref_callback): Update statusbar from prefs
	(needed for Family View).
	* NEWS: Instant prefs.

2003-10-15  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.glade: Correct tooltips. 
	* src/GrampsCfg.py:	Enable using four toolbar styles as well as 
	the gnome default style.
	* src/preferences.glade: Add a title for the tree. HIGify toolbar styles. 
	* src/gramps_main.py (pref_callback): Set toolbar style from prefs.

2003-10-15  Tim Waugh  <twaugh@redhat.com>
	* src/Makefile.am: Add uninstall rule for grampslib.so (now 'make
	distcheck' passes again).

2003-10-14  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ListModel.py (find): Prevent traceback if the entry is not found.

2003-10-14  Don Allingham  <dallingham@users.sourceforge.net>
	* src/data/templates/Makefile.am: install blue_edge.tpkg
	* src/docgen/HtmlDoc.py: report error correctly on missing
	template

2003-10-13  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsParser.py: handle new witness format in XML file
	* src/WriteXML.py: handle new witness format in XML file
	* src/dialog.glade: removed unused callbacks
	* src/gramps.glade: adjust window size
	* src/ListModel.py: add the ability to find an entry
	* src/ChooseParents.py: Select the preferred spouse of the first
	selected person.

2003-10-13  Alex Roitman  <shura@alex.neuro.umn.edu>
	* configure.in, configure: Change version and release numbers.
	* TODO: Remove completed items.
	* src/plugins.glade: Switch from GtkDialog to GtkWindow (prevents it 
	from always being on top under metacity). Remove extra button.
	* src/Plugins.py (PluginDialog.__init__): Provide custom labels and
	tooltips for reports (Generate) and tools (Run);