@@ -70,6 +70,7 @@ class FamilyView:
         self.init_interface()
 
     def set_widgets(self,val):
+        already_init = self.cadded[val]
         if (val):
             self.ap_data = self.top.get_widget('ap_data2')
             self.swap_btn = self.top.get_widget('swap_btn2')
@@ -80,16 +81,17 @@ class FamilyView:
             self.select_spouse_btn = self.top.get_widget('select_spouse2')
             self.remove_spouse_btn = self.top.get_widget('remove_spouse2')
             self.child_list = self.top.get_widget('chlist2')
-            self.top.get_widget('add_parents2').connect('clicked',self.add_parents_clicked)
-            self.top.get_widget('del_parents2').connect('clicked',self.del_parents_clicked)
-            self.top.get_widget('add_spparents2').connect('clicked',self.add_sp_parents)
-            self.top.get_widget('del_spparents2').connect('clicked',self.del_sp_parents)
-            self.top.get_widget('fam_back2').connect('clicked',self.child_back)
-            self.top.get_widget('del_child_btn2').connect('clicked',self.remove_child_clicked)
-            self.top.get_widget('add_child_btn2').connect('clicked',self.add_child_clicked)
-            self.top.get_widget('select_child2').connect('clicked',self.select_child_clicked)
-            self.top.get_widget('ap_parents_btn2').connect('clicked',self.ap_parents_clicked)
-            self.top.get_widget('sp_parents_btn2').connect('clicked',self.sp_parents_clicked)
+            if not already_init:
+                self.top.get_widget('add_parents2').connect('clicked',self.add_parents_clicked)
+                self.top.get_widget('del_parents2').connect('clicked',self.del_parents_clicked)
+                self.top.get_widget('add_spparents2').connect('clicked',self.add_sp_parents)
+                self.top.get_widget('del_spparents2').connect('clicked',self.del_sp_parents)
+                self.top.get_widget('fam_back2').connect('clicked',self.child_back)
+                self.top.get_widget('del_child_btn2').connect('clicked',self.remove_child_clicked)
+                self.top.get_widget('add_child_btn2').connect('clicked',self.add_child_clicked)
+                self.top.get_widget('select_child2').connect('clicked',self.select_child_clicked)
+                self.top.get_widget('ap_parents_btn2').connect('clicked',self.ap_parents_clicked)
+                self.top.get_widget('sp_parents_btn2').connect('clicked',self.sp_parents_clicked)
             self.parent.views.get_nth_page(2).show_all()
             if self.parent.views.get_current_page() == 1:
                 self.parent.views.set_current_page(2)
@@ -104,16 +106,17 @@ class FamilyView:
             self.select_spouse_btn = self.top.get_widget('select_spouse')
             self.remove_spouse_btn = self.top.get_widget('remove_spouse')
             self.child_list = self.top.get_widget('chlist')
-            self.top.get_widget('add_parents').connect('clicked',self.add_parents_clicked)
-            self.top.get_widget('del_parents').connect('clicked',self.del_parents_clicked)
-            self.top.get_widget('add_spparents').connect('clicked',self.add_sp_parents)
-            self.top.get_widget('del_spparents').connect('clicked',self.del_sp_parents)
-            self.top.get_widget('fam_back').connect('clicked',self.child_back)
-            self.top.get_widget('del_child_btn').connect('clicked',self.remove_child_clicked)
-            self.top.get_widget('add_child_btn').connect('clicked',self.add_child_clicked)
-            self.top.get_widget('select_child').connect('clicked',self.select_child_clicked)
-            self.top.get_widget('ap_parents_btn').connect('clicked',self.ap_parents_clicked)
-            self.top.get_widget('sp_parents_btn').connect('clicked',self.sp_parents_clicked)
+            if not already_init:
+                self.top.get_widget('add_parents').connect('clicked',self.add_parents_clicked)
+                self.top.get_widget('del_parents').connect('clicked',self.del_parents_clicked)
+                self.top.get_widget('add_spparents').connect('clicked',self.add_sp_parents)
+                self.top.get_widget('del_spparents').connect('clicked',self.del_sp_parents)
+                self.top.get_widget('fam_back').connect('clicked',self.child_back)
+                self.top.get_widget('del_child_btn').connect('clicked',self.remove_child_clicked)
+                self.top.get_widget('add_child_btn').connect('clicked',self.add_child_clicked)
+                self.top.get_widget('select_child').connect('clicked',self.select_child_clicked)
+                self.top.get_widget('ap_parents_btn').connect('clicked',self.ap_parents_clicked)
+                self.top.get_widget('sp_parents_btn').connect('clicked',self.sp_parents_clicked)
             self.parent.views.get_nth_page(1).show_all()
             if self.parent.views.get_current_page() == 2:
                 self.parent.views.set_current_page(1)
