@@ -10,6 +10,10 @@
 	* src/gramps_main.py (pref_callback): Update statusbar from prefs
 	(needed for Family View).
 	* NEWS: Instant prefs.
+	* src/FamilyView.py (set_widgets): Do not connect buttons if this 
+	view is already initialized.
+	* src/GrampsCfg.py: Set GNOME toolbar prefs as the default. 
+	Correct existing gconf key detection.
 
 2003-10-15  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/gramps.glade: Correct tooltips. 
